# TaSMChecking

./: README.md
Mibench/: qsort.sh
Mibench/CRC32/: Makefile  crc_or  crc_sf  run_original.sh  run_softboundcets.sh
Mibench/FFT/: Makefile  fft_or  fft_sf  run_original.sh  run_softboundcets.sh
Mibench/basicmath/: Makefile  basiccmath_or  basicmath_sf  run_original.sh  run_softboundcets.sh
Mibench/bitcount/: Makefile  bitcount_or  bitcount_sf  run_original.sh  run_softboundcets.sh
Mibench/qsort/: Makefile  llvmir.ll  qsort.sh  qsort_large  qsort_small
Mibench/sha/: Makefile  run_original.sh  run_softboundcets.sh  sha.ll  sha_ts
Mibench/susan/: Makefile  run_original.sh  run_softboundcets.sh  susan_or  susan_sf
mess/: readme.md
project/: log.c  readme.md
project/pass/: CMakeLists.txt  log  readme.md  tasmChecking.cpp
project/runtime/: CMakeLists.txt  helpFunction.h  tasmc.c  tasmc.h  tasmcErrors.h
test/: readme.md
test/add-function-from-lib/: readme.md  test
test/base-bound-func/: readme.md  run.sh  test  test.1  test_1  test_1.asm  test_1.c  test_1.ll  test_2  test_2.c
test/check-spatial/: check  check.c
test/global-value/: demo  demo.c  out.ll  pointer.c  pointer.ll  pointer_1.ll  readme.md  struct1.ll  struct_simple.c  test.c  test.ll
test/global-value/pass/: CMakeLists.txt  module.cpp
test/identity-pointer/: readme.md  test  test.c  test.ll
test/identity-pointer/pass/: CMakeLists.txt  module.cpp
test/lib-check-temporal/: run.sh  test_1.c  test_2  test_2.c
test/masking-pointer/: mask  temp.c
test/operator-pointer/: pointer  test.c
test/shadow-stack/: shadow.c  test  test.c
test/test-shadow-stack/: shadow.c
test/transform-main/: readme.md  test  test.c
test/use-libtasmc/: readme.md  test  test.c
test/watch-llvm-ir/: array.c  array.ll  run.sh  test2.ll  test_2  test_2.asm  test_2.c  test_2.ll
test_dev/add-function-from-lib/: readme.md  test.bc  test.cpp
test_dev/add-function-from-lib/pass/: CMakeLists.txt
test_dev/base-bound-func/: readme.md  run.sh  sym  test_1  test_1.asm  test_22
test_dev/check-spatial/: check.c  readme.md
test_dev/global-value/: global.c  pointer.ll  pointer_1.c  pointer_2.c  pointer_2.ll  readme.md  struct1.ll  test.c
test_dev/lib-check-temporal/: run2.sh  test  test.c
test_dev/masking-pointer/: mask.cpp  temp  void  void.c
test_dev/operator-pointer/: pointer.c
test_dev/shadow-stack/: shadow
test_dev/test-func-ptr-arg-spatial/: test.c
test_dev/transform-main/: test
test_dev/watch-llvm-ir/: test.c  test.ll  test_2.c
test_unit/: readme.md
(+22 files in other folders)
